Hashing the passwords in database