@@ -4,6 +4,7 @@ import com.google.protobuf.Timestamp;
 import io.grpc.stub.StreamObserver;
 import org.lognet.springboot.grpc.GRpcService;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import via.pro3.prescriptionsgrpc.entities.hospital.Drug;
 import via.pro3.prescriptionsgrpc.entities.hospital.Prescription;
 import via.pro3.prescriptionsgrpc.entities.hospital.PrescriptionDrug;
@@ -24,24 +25,27 @@ import java.util.stream.Collectors;
 @GRpcService
 public class PrescriptionServiceImpl extends HospitalGrpc.HospitalImplBase {
 
-  private final IDatabasePrescriptionRepository prescriptionRepository;
+    private final IDatabasePrescriptionRepository prescriptionRepository;
 
-  private final IDatabaseUserRepository userRepository;
+    private final IDatabaseUserRepository userRepository;
 
-  private final IDatabasePrescriptionDrugRepository prescriptionDrugRepository;
+    private final IDatabasePrescriptionDrugRepository prescriptionDrugRepository;
 
-  private final IPharmacyDrugRepository drugStorageRepository;
+    private final IPharmacyDrugRepository drugStorageRepository;
 
-  private final IDatabaseDrugRepository drugRepository;
+    private final IDatabaseDrugRepository drugRepository;
+
+    private final PasswordEncoder passwordEncoder;
 
     @Autowired public PrescriptionServiceImpl(IDatabasePrescriptionRepository prescriptionRepository,
-        IDatabaseUserRepository userRepository, IDatabasePrescriptionDrugRepository prescriptionDrugRepository, IPharmacyDrugRepository drugStorageRepository, IDatabaseDrugRepository drugRepository)
+                                              IDatabaseUserRepository userRepository, IDatabasePrescriptionDrugRepository prescriptionDrugRepository, IPharmacyDrugRepository drugStorageRepository, IDatabaseDrugRepository drugRepository, PasswordEncoder passwordEncoder)
     {
         this.prescriptionRepository = prescriptionRepository;
         this.userRepository = userRepository;
         this.prescriptionDrugRepository = prescriptionDrugRepository;
         this.drugStorageRepository = drugStorageRepository;
         this.drugRepository = drugRepository;
+        this.passwordEncoder = passwordEncoder;
     }
 
     private LocalDate convertToLocalDate(Timestamp timestamp) {
@@ -66,7 +70,7 @@ public class PrescriptionServiceImpl extends HospitalGrpc.HospitalImplBase {
                 return UserRoles.Invalid;
         }
     }
-    
+
     private UserRoles getUserRole(User user){
         UserRoles role = switch (user.getRole())
         {
@@ -79,79 +83,79 @@ public class PrescriptionServiceImpl extends HospitalGrpc.HospitalImplBase {
         return role;
     }
 
-  @Override
-  public void createPrescription(CreatePrescriptionRequest request,
-                                 StreamObserver<PrescriptionReply> responseObserver) {
-    Prescription p = new Prescription();
+    @Override
+    public void createPrescription(CreatePrescriptionRequest request,
+                                   StreamObserver<PrescriptionReply> responseObserver) {
+        Prescription p = new Prescription();
 
-    User doctor = userRepository.findById(request.getDoctorId()).orElse(null);
-    User patient = userRepository.findById(request.getPatientId()).orElse(null);
+        User doctor = userRepository.findById(request.getDoctorId()).orElse(null);
+        User patient = userRepository.findById(request.getPatientId()).orElse(null);
 
-    if(doctor==null || patient==null){
+        if(doctor==null || patient==null){
             responseObserver.onError(new NullPointerException("doctor or patient is null"));
-        return;
-    }
-    if(doctor.getRole().equals("doctor")){
-          responseObserver.onError(new IllegalAccessException("Doctor is not doctoooor"));
-          return;
-      }
-    p.setDoctor(doctor);
-    p.setPatient(patient);
-    p.setIssueDate(LocalDate.now());
-    p.setExpirationDate(LocalDate.now().plusMonths(1));
+            return;
+        }
+        if(doctor.getRole().equals("doctor")){
+            responseObserver.onError(new IllegalAccessException("Doctor is not doctoooor"));
+            return;
+        }
+        p.setDoctor(doctor);
+        p.setPatient(patient);
+        p.setIssueDate(LocalDate.now());
+        p.setExpirationDate(LocalDate.now().plusMonths(1));
 
-    p = prescriptionRepository.save(p);
+        p = prescriptionRepository.save(p);
 //here drug impl
 //    Drug drug = drugRepository.findById(drug.getId());
-      List<Drug> drugs = new ArrayList<>();
-      List<PrescriptionDrug> prescriptionDrugs = new ArrayList<>();
-      //replyDrugs for later, when we generate ids instead of sending ready-made ones
-      List<via.pro3.prescriptionsgrpc.generated.Drug> replyDrugs = new ArrayList<>();
-    for(via.pro3.prescriptionsgrpc.generated.Drug drug : request.getDrugsList()){
-        Drug drugToSave = new Drug();
-        drugToSave.setName(drug.getName());
-        drugToSave.setDescription(drug.getDescription());
-        drugToSave.setAmount(drug.getAmount());
-        drugs.add(drugToSave);
+        List<Drug> drugs = new ArrayList<>();
+        List<PrescriptionDrug> prescriptionDrugs = new ArrayList<>();
+        //replyDrugs for later, when we generate ids instead of sending ready-made ones
+        List<via.pro3.prescriptionsgrpc.generated.Drug> replyDrugs = new ArrayList<>();
+        for(via.pro3.prescriptionsgrpc.generated.Drug drug : request.getDrugsList()){
+            Drug drugToSave = new Drug();
+            drugToSave.setName(drug.getName());
+            drugToSave.setDescription(drug.getDescription());
+            drugToSave.setAmount(drug.getAmount());
+            drugs.add(drugToSave);
 
-        //prescriptionDrug??
-        PrescriptionDrug prescriptionDrug = new PrescriptionDrug();
-        prescriptionDrug.setPrescription(p);
-        prescriptionDrug.setDrug(drugToSave);
-        prescriptionDrug.setNote(drug.getNote());
-        prescriptionDrug.setAvailabilityCount(drug.getAvailabilityCount());
-        prescriptionDrugs.add(prescriptionDrug);
+            //prescriptionDrug??
+            PrescriptionDrug prescriptionDrug = new PrescriptionDrug();
+            prescriptionDrug.setPrescription(p);
+            prescriptionDrug.setDrug(drugToSave);
+            prescriptionDrug.setNote(drug.getNote());
+            prescriptionDrug.setAvailabilityCount(drug.getAvailabilityCount());
+            prescriptionDrugs.add(prescriptionDrug);
+        }
+
+        List<Drug> savedDrugs = drugRepository.saveAll(drugs);
+        List<PrescriptionDrug> savedPrescriptionDrugs = prescriptionDrugRepository.saveAll(prescriptionDrugs);
+
+        //set reply date
+        Timestamp issueTs = Timestamp.newBuilder()
+                .setSeconds(p.getIssueDate().atStartOfDay(ZoneOffset.UTC).toEpochSecond())
+                .setNanos(0)
+                .build();
+        Timestamp expTs = Timestamp.newBuilder()
+                .setSeconds(p.getExpirationDate().atStartOfDay(ZoneOffset.UTC).toEpochSecond())
+                .setNanos(0)
+                .build();
+
+        PrescriptionReply reply = PrescriptionReply.newBuilder()
+                .setId(p.getId())
+                .setDoctorId(Math.toIntExact(p.getDoctor().getId()))
+                .setPatientId(Math.toIntExact(p.getPatient().getId()))
+                .setIssueDate(issueTs)
+                .setExpirationDate(expTs)
+                .addAllDrugs(request.getDrugsList())
+                .build();
+
+        responseObserver.onNext(reply);
+        responseObserver.onCompleted();
     }
 
-    List<Drug> savedDrugs = drugRepository.saveAll(drugs);
-    List<PrescriptionDrug> savedPrescriptionDrugs = prescriptionDrugRepository.saveAll(prescriptionDrugs);
-
-    //set reply date
-    Timestamp issueTs = Timestamp.newBuilder()
-        .setSeconds(p.getIssueDate().atStartOfDay(ZoneOffset.UTC).toEpochSecond())
-        .setNanos(0)
-        .build();
-    Timestamp expTs = Timestamp.newBuilder()
-        .setSeconds(p.getExpirationDate().atStartOfDay(ZoneOffset.UTC).toEpochSecond())
-        .setNanos(0)
-        .build();
-
-    PrescriptionReply reply = PrescriptionReply.newBuilder()
-        .setId(p.getId())
-        .setDoctorId(Math.toIntExact(p.getDoctor().getId()))
-        .setPatientId(Math.toIntExact(p.getPatient().getId()))
-        .setIssueDate(issueTs)
-        .setExpirationDate(expTs)
-        .addAllDrugs(request.getDrugsList())
-        .build();
-
-    responseObserver.onNext(reply);
-    responseObserver.onCompleted();
-  }
-
-  @Override
-  public void getPrescriptions(PrescriptionsRequest request,
-                               StreamObserver<GetPrescriptionsReply> responseObserver) {
+    @Override
+    public void getPrescriptions(PrescriptionsRequest request,
+                                 StreamObserver<GetPrescriptionsReply> responseObserver) {
 
         long patientCpr = request.getPatientId();
         User patient = userRepository.findById((int) patientCpr).orElse(null);
@@ -163,48 +167,47 @@ public class PrescriptionServiceImpl extends HospitalGrpc.HospitalImplBase {
             return;
         }
 
-    List<Prescription> prescriptions =
-        prescriptionRepository.findByPatient_Id(Math.toIntExact(patientCpr));
+        List<Prescription> prescriptions =
+                prescriptionRepository.findByPatient_Id(Math.toIntExact(patientCpr));
 
-    //where drugs?
-      //TODO!!!!: IN PROTO CHANGES INT32 INTO INT64. DELETE MATH.TOINTEXACT
-    List<PrescriptionReply> items = prescriptions.stream()
-        .map(p -> PrescriptionReply.newBuilder()
-            .setId(p.getId())
-            .setIssueDate(convertToTimestamp(p.getIssueDate()))
-                .setExpirationDate(convertToTimestamp(p.getExpirationDate()))
-                .addAllDrugs(drugRepository.findByPrescriptionId(p.getId()).stream().map(drug -> via.pro3.prescriptionsgrpc.generated.Drug.newBuilder()
-                        .setDescription(drug.getDescription())
-                        .setAmount(drug.getAmount())
-                        .setName(drug.getName())
-                        .setId(drug.getId())
-                        .setAvailabilityCount(1)
-                        .setNote("")
+        //where drugs?
+        //TODO!!!!: IN PROTO CHANGES INT32 INTO INT64. DELETE MATH.TOINTEXACT
+        List<PrescriptionReply> items = prescriptions.stream()
+                .map(p -> PrescriptionReply.newBuilder()
+                        .setId(p.getId())
+                        .setIssueDate(convertToTimestamp(p.getIssueDate()))
+                        .setExpirationDate(convertToTimestamp(p.getExpirationDate()))
+                        .addAllDrugs(drugRepository.findByPrescriptionId(p.getId()).stream().map(drug -> via.pro3.prescriptionsgrpc.generated.Drug.newBuilder()
+                                        .setDescription(drug.getDescription())
+                                        .setAmount(drug.getAmount())
+                                        .setName(drug.getName())
+                                        .setId(drug.getId())
+                                        .setAvailabilityCount(1)
+                                        .setNote("")
+                                        .build())
+                                .toList())
+
+                        .setDoctorId(Math.toIntExact(p.getDoctor().getId()))
+                        .setPatientId(Math.toIntExact(p.getPatient().getId()))
                         .build())
-                        .toList())
+                .collect(Collectors.toList());
 
-            .setDoctorId(Math.toIntExact(p.getDoctor().getId()))
-            .setPatientId(Math.toIntExact(p.getPatient().getId()))
-            .build())
-        .collect(Collectors.toList());
+        GetPrescriptionsReply reply = GetPrescriptionsReply.newBuilder()
+                .addAllPrescriptions(items)
+                .build();
 
-    GetPrescriptionsReply reply = GetPrescriptionsReply.newBuilder()
-        .addAllPrescriptions(items)
-        .build();
-
-    responseObserver.onNext(reply);
-    responseObserver.onCompleted();
-  }
+        responseObserver.onNext(reply);
+        responseObserver.onCompleted();
+    }
 
     @Override public void checkCredentials(
-        CheckCredentialsRequest request, io.grpc.stub.StreamObserver<CheckCredentialsReply> responseObserver)
+            CheckCredentialsRequest request, io.grpc.stub.StreamObserver<CheckCredentialsReply> responseObserver)
     {
         long cpr = request.getUserId();
 
         User user = userRepository.findById((int) cpr).orElse(null);
 
-        if (user != null && user.getPassword().equals(request.getPassword()))
-        {
+        if (user != null && passwordEncoder.matches(request.getPassword(), user.getPassword())) {
             UserRoles role = getUserRole(user);
 
             CheckCredentialsReply reply = CheckCredentialsReply.newBuilder().setRole(role).build();
@@ -219,7 +222,7 @@ public class PrescriptionServiceImpl extends HospitalGrpc.HospitalImplBase {
     }
 
     @Override public void createUser(CreateUserRequest request,
-        StreamObserver<CreateUserReply> responseObserver)
+                                     StreamObserver<CreateUserReply> responseObserver)
     {
         //checks if user exists, without this you could continuously
         //create new users on 1 cpr to overwrite others
@@ -229,51 +232,51 @@ public class PrescriptionServiceImpl extends HospitalGrpc.HospitalImplBase {
             responseObserver.onError(new SQLException("User already exists"));
             return;
         }
+        String encodedPassword = passwordEncoder.encode(request.getPassword());
 
         User user = new User(
-            request.getName(),
-            request.getSurname(),
-            request.getPassword(),
-            request.getPhone(),
-            request.getCpr(),
-            User.Roles.PATIENT,
-            convertToLocalDate(request.getBirthday()),
-            request.getGender()
+                request.getName(),
+                request.getSurname(),
+                encodedPassword,
+                request.getPhone(),
+                request.getCpr(),
+                User.Roles.PATIENT,
+                convertToLocalDate(request.getBirthday()),
+                request.getGender()
         );
 
         //useful for any generated fields (in this case role being set to patient)
         User created = userRepository.save(user);
 
         CreateUserReply response = CreateUserReply.newBuilder()
-            .setName(created.getName())
-            .setSurname(created.getSurname())
-            .setPassword(created.getPassword())
-            .setPhone(created.getPhone())
-            .setCpr(created.getId())
-            .setRole(roleForString(created.getRole()))
-            .setGender(created.getGender())
-            .setBirthday(convertToTimestamp(created.getBirthday()))
-            .build();
+                .setName(created.getName())
+                .setSurname(created.getSurname())
+                .setPhone(created.getPhone())
+                .setCpr(created.getId())
+                .setRole(roleForString(created.getRole()))
+                .setGender(created.getGender())
+                .setBirthday(convertToTimestamp(created.getBirthday()))
+                .build();
 
         responseObserver.onNext(response);
         responseObserver.onCompleted();
     }
 
     @Override public void getDrugStorage(GetDrugRequest request,
-        StreamObserver<GetDrugReply> responseObserver)
+                                         StreamObserver<GetDrugReply> responseObserver)
     {
         PharmacyDrug drug = drugStorageRepository.findById(
-            request.getId()).orElse(null);
+                request.getId()).orElse(null);
 
         if (drug == null)
         {
             GetDrugReply reply = GetDrugReply.newBuilder()
-                .setName("0")
-                .setId(0)
-                .setStock(0)
-                .setPrice(0)
-                .setReorderLevel(0)
-                .build();
+                    .setName("0")
+                    .setId(0)
+                    .setStock(0)
+                    .setPrice(0)
+                    .setReorderLevel(0)
+                    .build();
 
             responseObserver.onNext(reply);
             responseObserver.onCompleted();
@@ -281,30 +284,30 @@ public class PrescriptionServiceImpl extends HospitalGrpc.HospitalImplBase {
         }
 
         GetDrugReply reply = GetDrugReply.newBuilder()
-            .setName(drug.getName())
-            .setId(drug.getId())
-            .setStock(drug.getStock())
-            .setPrice(drug.getPrice())
-            .setReorderLevel(drug.getReorderLevel())
-            .build();
+                .setName(drug.getName())
+                .setId(drug.getId())
+                .setStock(drug.getStock())
+                .setPrice(drug.getPrice())
+                .setReorderLevel(drug.getReorderLevel())
+                .build();
 
         responseObserver.onNext(reply);
         responseObserver.onCompleted();
     }
 
     @Override public void createDrugStorage(CreateDrugRequest request,
-        StreamObserver<CreateDrugReply> responseObserver)
+                                            StreamObserver<CreateDrugReply> responseObserver)
     {
         PharmacyDrug created = drugStorageRepository.save(new PharmacyDrug(
-            request.getName(), request.getStock(), request.getPrice(), request.getReorderLevel()));
+                request.getName(), request.getStock(), request.getPrice(), request.getReorderLevel()));
 
         CreateDrugReply reply = CreateDrugReply.newBuilder()
-            .setName(created.getName())
-            .setId(created.getId())
-            .setStock(created.getStock())
-            .setPrice(created.getPrice())
-            .setReorderLevel(created.getReorderLevel())
-            .build();
+                .setName(created.getName())
+                .setId(created.getId())
+                .setStock(created.getStock())
+                .setPrice(created.getPrice())
+                .setReorderLevel(created.getReorderLevel())
+                .build();
 
         responseObserver.onNext(reply);
         responseObserver.onCompleted();
